--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -182,7 +182,7 @@
         app:layout_constraintTop_toBottomOf="@id/textView11" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/iv_publish_goods"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="32dp"
@@ -197,11 +197,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/hobby"
+        android:text="发布代购"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintEnd_toEndOf="@id/imageView4"
-        app:layout_constraintStart_toStartOf="@id/imageView4"
-        app:layout_constraintTop_toBottomOf="@id/imageView4" />
+        app:layout_constraintEnd_toEndOf="@id/iv_publish_goods"
+        app:layout_constraintStart_toStartOf="@id/iv_publish_goods"
+        app:layout_constraintTop_toBottomOf="@id/iv_publish_goods" />
 
     <ImageView
         android:id="@+id/iv_user_trade_purchaser"
@@ -209,7 +209,7 @@
         android:layout_height="60dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/imageView4"
+        app:layout_constraintTop_toTopOf="@id/iv_publish_goods"
         app:srcCompat="@drawable/order" />
 
     <TextView
@@ -227,8 +227,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:layout_constraintEnd_toStartOf="@id/iv_user_trade_purchaser"
-        app:layout_constraintStart_toEndOf="@id/imageView4"
-        app:layout_constraintTop_toTopOf="@id/imageView4"
+        app:layout_constraintStart_toEndOf="@id/iv_publish_goods"
+        app:layout_constraintTop_toTopOf="@id/iv_publish_goods"
         app:srcCompat="@drawable/collection" />
 
     <TextView
@@ -362,8 +362,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:layout_constraintEnd_toStartOf="@+id/iv_user_collect"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/iv_publish_goods"
+        app:layout_constraintTop_toTopOf="@+id/iv_publish_goods"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <ImageView
