--- a/app/src/main/res/layout/activity_publish_goods.xml
+++ b/app/src/main/res/layout/activity_publish_goods.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_goods_keyword" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/sp_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -74,7 +74,7 @@
         android:layout_marginTop="8dp"
         android:text="商品价格"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/sp_tag" />
 
     <EditText
         android:id="@+id/et_goods_price"
@@ -87,7 +87,7 @@
         android:inputType="textPersonName"
         android:text="5"
         app:layout_constraintStart_toEndOf="@+id/textView26"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/sp_tag" />
 
     <TextView
         android:id="@+id/textView27"
