--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -251,7 +251,7 @@
         app:layout_constraintTop_toBottomOf="@id/textView13" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/iv_my_goods"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -266,11 +266,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/to_be_delivered"
+        android:text="我的代购"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintEnd_toEndOf="@id/imageView7"
-        app:layout_constraintStart_toStartOf="@id/imageView7"
-        app:layout_constraintTop_toBottomOf="@id/imageView7" />
+        app:layout_constraintEnd_toEndOf="@id/iv_my_goods"
+        app:layout_constraintStart_toStartOf="@id/iv_my_goods"
+        app:layout_constraintTop_toBottomOf="@id/iv_my_goods" />
 
     <ImageView
         android:id="@+id/imageView8"
@@ -300,7 +300,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@id/imageView11"
-        app:layout_constraintStart_toEndOf="@id/imageView7"
+        app:layout_constraintStart_toEndOf="@id/iv_my_goods"
         app:layout_constraintTop_toBottomOf="@id/view1"
         app:srcCompat="@drawable/to_be_received" />
 
