--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -256,7 +256,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@id/imageView9"
+        app:layout_constraintEnd_toStartOf="@id/iv_notification"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view1"
         app:srcCompat="@drawable/to_be_delivered" />
@@ -295,7 +295,7 @@
         app:layout_constraintTop_toBottomOf="@id/imageView8" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/iv_notification"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
@@ -309,11 +309,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/to_be_received"
+        android:text="通知"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintEnd_toEndOf="@id/imageView9"
-        app:layout_constraintStart_toStartOf="@id/imageView9"
-        app:layout_constraintTop_toBottomOf="@id/imageView9" />
+        app:layout_constraintEnd_toEndOf="@id/iv_notification"
+        app:layout_constraintStart_toStartOf="@id/iv_notification"
+        app:layout_constraintTop_toBottomOf="@id/iv_notification" />
 
     <ImageView
         android:id="@+id/imageView10"
@@ -342,7 +342,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@id/imageView10"
-        app:layout_constraintStart_toEndOf="@id/imageView9"
+        app:layout_constraintStart_toEndOf="@id/iv_notification"
         app:layout_constraintTop_toBottomOf="@id/view1"
         app:srcCompat="@drawable/need_to_purchase" />
 
