--- a/app/src/main/res/layout/activity_good.xml
+++ b/app/src/main/res/layout/activity_good.xml
@@ -108,8 +108,9 @@
             android:layout_marginStart="8dp"
             android:text="购买"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_good_description" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_isseller" />
 
         <EditText
             android:id="@+id/et_buy_num"
@@ -175,6 +176,17 @@
             android:text="收藏"
             app:layout_constraintStart_toEndOf="@+id/btn_iscollected"
             app:layout_constraintTop_toTopOf="@+id/btn_follow" />
+
+        <TextView
+            android:id="@+id/tv_isseller"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="该商品是你正在出售的"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_good_description" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
