完成更新商品信息页面

--- a/app/src/main/res/layout/activity_good.xml
+++ b/app/src/main/res/layout/activity_good.xml
@@ -106,11 +106,13 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="购买"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_isseller" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_update" />
 
         <EditText
             android:id="@+id/et_buy_num"
@@ -184,9 +186,22 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text="该商品是你正在出售的"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_good_description" />
+
+        <Button
+            android:id="@+id/btn_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="更改"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_isseller" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
