--- a/app/src/main/res/layout/activity_update_goods.xml
+++ b/app/src/main/res/layout/activity_update_goods.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.zhaoweihao.shopping.PublishGoodsActivity">
+    tools:context="me.zhaoweihao.shopping.UpdateGoodsActivity">
 
     <TextView
         android:id="@+id/textView23"
@@ -169,7 +169,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="发布"
+        android:text="更改"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_goods_address" />
 
@@ -182,4 +182,13 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_goods_image"
         />
 
+    <Button
+        android:id="@+id/btn_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="取消"
+        app:layout_constraintStart_toEndOf="@+id/btn_update"
+        app:layout_constraintTop_toTopOf="@+id/btn_update" />
+
 </android.support.constraint.ConstraintLayout>
+
