--- a/app/src/main/res/layout/seller_trade_item.xml
+++ b/app/src/main/res/layout/seller_trade_item.xml
@@ -77,4 +77,12 @@
         app:layout_constraintStart_toEndOf="@+id/iv_goods"
         app:layout_constraintTop_toBottomOf="@+id/tv_goods_name" />
 
+    <Button
+        android:id="@+id/btn_deliver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="确认发货"
+        app:layout_constraintStart_toEndOf="@+id/iv_goods"
+        app:layout_constraintTop_toBottomOf="@+id/tv_trade_status" />
+
 </android.support.constraint.ConstraintLayout>
