--- a/app/src/main/res/layout/activity_update_user_info.xml
+++ b/app/src/main/res/layout/activity_update_user_info.xml
@@ -147,4 +147,14 @@
             android:text="男" />
     </RadioGroup>
 
+    <Button
+        android:id="@+id/btn_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="测试"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_sure" />
+
 </android.support.constraint.ConstraintLayout>
