--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -149,12 +149,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        tools:text="82"
         android:textColor="@color/purchasingcolor"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@id/textView9"
         app:layout_constraintStart_toStartOf="@id/textView9"
-        app:layout_constraintTop_toBottomOf="@id/textView9" />
+        app:layout_constraintTop_toBottomOf="@id/textView9"
+        tools:text="已实名" />
 
     <TextView
         android:id="@+id/textView11"
