--- a/app/src/main/res/layout/purchaser_trade_item.xml
+++ b/app/src/main/res/layout/purchaser_trade_item.xml
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toTopOf="@+id/btn_sure" />
 
     <TextView
-        android:id="@+id/tv_comment"
+        android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
