--- a/app/src/main/res/layout/seller_trade_item.xml
+++ b/app/src/main/res/layout/seller_trade_item.xml
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/tv_comment"
+        app:layout_constraintStart_toEndOf="@+id/tv_content"
         app:layout_constraintTop_toBottomOf="@+id/tv_buy_num" />
 
     <TextView
@@ -66,10 +66,10 @@
         android:layout_marginStart="8dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/iv_goods"
-        app:layout_constraintTop_toBottomOf="@+id/tv_comment" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_content" />
 
     <TextView
-        android:id="@+id/tv_comment"
+        android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
