--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#52ADE6</color>
+    <color name="colorPrimary">#61bfb8</color>
     <color name="colorPrimaryDark">#52ADE6</color>
     <color name="colorAccent">#DB4437</color>
     <color name="white">#FFFFFF</color>
