--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
 
     <dimen name="bottom_nav_height">56dp</dimen>
 
+    <dimen name="border_length">125dp</dimen>
+
     <dimen name="item_height">96dp</dimen>
     <dimen name="item_image_height">64dp</dimen>
 
