--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,10 +9,14 @@
     <color name="tabunselect">#E0E0E0</color>
     <color name="purchasingcolor">#C8C8C8</color>
 
+    <color name="textColor">#84e6dd</color>
+
     <color name="colorPrimaryText">#212121</color>
 
     <color name="colorNavItemUnselected">#757575</color>
     <color name="colorNavItemSelected">@color/colorAccent</color>
 
     <color name="colorBaseBackground">#fafafa</color>
+
+    <color name="red">#f90e1b</color>
 </resources>
