--- a/app/src/main/res/layout/fragment_favorites_container.xml
+++ b/app/src/main/res/layout/fragment_favorites_container.xml
@@ -31,6 +31,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/ll_1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -42,6 +43,7 @@
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
+                        android:id="@+id/tv_1"
                         android:textColor="@color/colorPrimary"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -50,6 +52,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -61,6 +64,7 @@
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
+                        android:id="@+id/tv_2"
                         android:textColor="@color/colorPrimary"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -69,17 +73,20 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
                     <ImageView
+
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
+                        android:id="@+id/tv_3"
                         android:textColor="@color/colorPrimary"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -96,6 +103,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/ll_4"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -107,6 +115,7 @@
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
+                        android:id="@+id/tv_4"
                         android:textColor="@color/colorPrimary"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -115,6 +124,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_5"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -126,6 +136,7 @@
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
+                        android:id="@+id/tv_5"
                         android:textColor="@color/colorPrimary"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -134,6 +145,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_6"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -145,6 +157,7 @@
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
+                        android:id="@+id/tv_6"
                         android:textColor="@color/colorPrimary"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
